--- a/package.json
+++ b/package.json
@@ -11,52 +11,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.2",
-    "@angular/cdk": "^14.0.2",
-    "@angular/cli": "^14.0.2",
-    "@angular/common": "~14.0.2",
-    "@angular/compiler": "~14.0.2",
-    "@angular/core": "~14.0.2",
+    "@angular/animations": "~14.0.3",
+    "@angular/cdk": "^14.0.3",
+    "@angular/cli": "^14.0.3",
+    "@angular/common": "~14.0.3",
+    "@angular/compiler": "~14.0.3",
+    "@angular/core": "~14.0.3",
     "@angular/fire": "^7.4.1",
-    "@angular/forms": "~14.0.2",
-    "@angular/material": "^14.0.2",
-    "@angular/platform-browser": "~14.0.2",
-    "@angular/platform-browser-dynamic": "~14.0.2",
-    "@angular/router": "~14.0.2",
+    "@angular/forms": "~14.0.3",
+    "@angular/material": "^14.0.3",
+    "@angular/platform-browser": "~14.0.3",
+    "@angular/platform-browser-dynamic": "~14.0.3",
+    "@angular/router": "~14.0.3",
     "@auth0/angular-jwt": "^5.0.2",
     "@cloudinary/ng": "^1.4.1",
-    "@cloudinary/url-gen": "^1.5.1",
-    "@firebase/auth": "^0.20.2",
+    "@cloudinary/url-gen": "^1.8.0",
+    "@firebase/auth": "^0.20.4",
     "angular-material-fileupload": "^3.0.2",
     "firebase": "^9.8.4",
     "multer": "^1.4.3",
-    "ngx-dropzone": "^3.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "ngx-dropzone": "^3.1.0",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.17",
-    "@angular-devkit/build-angular": "~14.0.2",
-    "@angular/compiler-cli": "~14.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "@angular-devkit/architect": "0.1400.3",
+    "@angular-devkit/build-angular": "~14.0.3",
+    "@angular/compiler-cli": "~14.0.3",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.0.0",
+    "codelyzer": "^6.0.2",
+    "firebase-tools": "^11.1.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "inquirer": "^9.0.0",
+    "inquirer-autocomplete-prompt": "^2.0.0",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
     "jsonc-parser": "^3.0.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "open": "^7.0.3",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "open": "^8.4.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.8.1",
     "tslint": "~6.1.0",
     "typescript": "~4.7.4"
   },
