--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-end",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -63,6 +63,6 @@
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.2.8.",
   "main": "karma.conf.js",
   "keywords": [],
-  "author": "",
+  "author": "MSM-IT",
   "license": "ISC"
 }
